test/programs/error-overlapping-patterns-simple.defs
(def A Y)
(def A Z)